# CloudComPy

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeSettings.py37c.json  CMakeSettings.py38.json  CMakeSettings37cQt515.json  License.txt  README.md  TODO_list.md  checkenv.py  envCloudComPy.bat
boostPython/: CMakeLists.txt  DistanceComputationTools.rst  GeometricalAnalysisTools.rst  Neighbourhood.rst  NeighbourhoodPy.cpp  NeighbourhoodPy.hpp  NeighbourhoodPy_DocStrings.hpp  ScalarField.rst  ScalarFieldPy.cpp  ScalarFieldPy.hpp  ScalarFieldPy_DocStrings.hpp  __init__.py  ccDocStrings.hpp  ccFacet.rst  ccFacetPy.cpp  ccFacetPy.hpp  ccFacetPy_DocStrings.hpp  ccGenericCloudPy.cpp  ccGenericCloudPy.hpp  ccGenericCloudPy_DocStrings.hpp  ccMesh.rst  ccMeshPy.cpp  ccMeshPy.hpp  ccMeshPy_DocStrings.hpp  ccOctree.rst  ccOctreePy.cpp  ccOctreePy.hpp  ccOctreePy_DocStrings.hpp  ccPointCloud.rst  ccPointCloudPy.cpp  ccPointCloudPy.hpp  ccPointCloudPy_DocStrings.hpp  ccPolyline.rst  ccPolylinePy.cpp  ccPolylinePy.hpp  ccPolylinePy_DocStrings.hpp  ccPrimitives.rst  ccPrimitivesPy.cpp  ccPrimitivesPy.hpp  ccPrimitivesPy_DocStrings.hpp  (+31 more)
boostPython/CSF/: CMakeLists.txt  CSFPy.cpp  CSF_DocStrings.hpp  __init__.py
boostPython/HPR/: CMakeLists.txt  HPRPy.cpp  HPR_DocStrings.hpp  __init__.py
boostPython/M3C2/: CMakeLists.txt  M3C2Py.cpp  M3C2_DocStrings.hpp  __init__.py
boostPython/MeshBoolean/: CMakeLists.txt  MeshBooleanPy.cpp  MeshBoolean_DocStrings.hpp  __init__.py
boostPython/PCL/: CMakeLists.txt  PCLPy.cpp  PCL_DocStrings.hpp  __init__.py
boostPython/PCV/: CMakeLists.txt  PCVPy.cpp  PCV_DocStrings.hpp  __init__.py
boostPython/RANSAC_SD/: CMakeLists.txt  RANSAC_SDPy.cpp  RANSAC_SD_DocStrings.hpp  __init__.py
building/: Dockerfile_CloudComPy310_build  Dockerfile_CloudComPy39_build  Dockerfile_CloudComPy39_build_allPlugins  Dockerfile_CloudComPy39_build_fbxsdk  conda-list_Ubuntu20.04  conda-list_Windows10  conda-list_Windows10_310  conda-list_Windows11_310  conda-list_macOS  genCloudComPy_Conda310_Ubuntu2004.sh  genCloudComPy_Conda310_docker.sh  genCloudComPy_Conda310_macos.zsh  genCloudComPy_Conda39_Ubuntu2004.sh  genCloudComPy_Conda39_docker.sh
cmake/: FindPYQTSIP.cmake
doc/: BuildLinuxConda.md  BuildLinuxCondaDocker.md  BuildUbuntuNative.md  BuildWindowsConda.md  CMakeLists.txt  ReleaseNotes.md  UseDockerLinuxConda.md  UseDockerLinuxCondaBinary.md  UseLinuxCondaBinary.md  UseMacOSCondaBinary.md  UseWindowsCondaBinary.md  prerequisitesVersions.md
doc/samples/: CMakeLists.txt  histogramOnDistanceComputation.ipynb
pyAPI/: CMakeLists.txt  PyScalarType.h  ccNumpyIncludes.h  ccTrace.h  initCC.cpp  initCC.h  initNumpy.h  optdefines.h.in  pyCC.cpp  pyCC.h  pyccTrace.h
pybind11/: CMakeLists.txt  ScalarFieldPy.cpp  ScalarFieldPy.hpp  ScalarFieldPy_DocStrings.hpp  ccFacetPy.cpp  ccFacetPy.hpp  ccGenericCloudPy.cpp  ccGenericCloudPy_DocStrings.hpp  ccMeshPy.cpp  ccMeshPy.hpp  ccMeshPy_DocStrings.hpp  ccOctreePy.cpp  ccOctreePy.hpp  ccOctreePy_DocStrings.hpp  ccPointCloudPy.cpp  ccPointCloudPy.hpp  ccPointCloudPy_DocStrings.hpp  ccPolylinePy.cpp  ccPolylinePy_DocStrings.hpp  ccPrimitivesPy.cpp  ccPrimitivesPy_DocStrings.hpp  ccSensorPy.cpp  ccSensorPy.hpp  ccSensorPy_DocStrings.hpp  cloudComPy.cpp  cloudComPy.hpp  cloudComPy_DocStrings.hpp  cloudSamplingToolsPy.cpp  cloudSamplingToolsPy.hpp  cloudSamplingToolsPy_DocStrings.hpp  colorsPy.cpp  colorsPy.hpp  colorsPy_DocStrings.hpp  condaCloud.zsh  distanceComputationToolsPy.cpp  distanceComputationToolsPy.hpp  distanceComputationToolsPy_DocStrings.hpp  geometricalAnalysisToolsPy.cpp  registrationToolsPy.cpp
pybind11/CSF/: CMakeLists.txt  CSFPy.cpp  CSF_DocStrings.hpp  __init__.py
pybind11/Canupo/: CMakeLists.txt  CanupoPy.cpp  Canupo_DocStrings.hpp  __init__.py
pybind11/Cork/: CMakeLists.txt  CorkPy.cpp  Cork_DocStrings.hpp  __init__.py
pybind11/HPR/: CMakeLists.txt  __init__.py
pybind11/M3C2/: CMakeLists.txt  M3C2Py.cpp  M3C2_DocStrings.hpp  __init__.py
pybind11/MeshBoolean/: CMakeLists.txt  MeshBooleanPy.cpp  __init__.py
pybind11/PCL/: CMakeLists.txt  PCLPy.cpp  PCL_DocStrings.hpp  __init__.py
pybind11/PCV/: CMakeLists.txt  PCVPy.cpp  __init__.py
pybind11/PoissonRecon/: CMakeLists.txt  PoissonReconPy.cpp  PoissonRecon_DocStrings.hpp  __init__.py
pybind11/RANSAC_SD/: CMakeLists.txt  RANSAC_SDPy.cpp  RANSAC_SD_DocStrings.hpp  __init__.py
pybind11/SRA/: CMakeLists.txt  SRAPy.cpp  SRA_DocStrings.hpp  __init__.py
sip/: CMakeLists.txt  ScalarField.sip  ccPointCloud.sip  ccPolyline.sip  cloudCompare.sip  pyCC.sip
sphinxDoc/: CMakeLists.txt  CSF.rst  Canupo.rst  DistanceComputationTools.rst  GeometricalAnalysisTools.rst  HPR.rst  M3C2.rst  MeshBoolean.rst  MinimalBoundingBox.rst  Neighbourhood.rst  PCL.rst  PCV.rst  PoissonRecon.rst  RANSAC_SD.rst  SRA.rst  ScalarField.rst  ccFacet.rst  ccMesh.rst  ccOctree.rst  ccPointCloud.rst  ccPolyline.rst  ccPrimitives.rst  ccSensor.rst  cloudComPy.rst  cloudSamplingTools.rst  colors.rst  conf.py.in  genSphinxDoc.sh.in  genSphinxDocConda.sh.in  genSphinxDocMacOSConda.zsh.in  genSphinxDocWindows.bat.in  index.rst  introduction.rst  libBundleCloudComPy.py.in  postInstall.cmake  signatureCloudComPy.sh.in  tables.rst  userEntities.rst  userIntro.rst  userLoad.rst  (+3 more)
tests/: CMakeLists.txt  DartConfiguration.tcl.in  DartTestfile.txt  DartTestfile.win.txt  envPyCC.bat  envPyCC.bat.in  envPyCC.sh  envPyCC.sh.in  execInstallTest.bat  execInstallTest.bat.in  execInstallTest.sh  execInstallTest.sh.in  execTest.bat.in  execTest.sh.in  gendata.py.in  test001.py  test002.py  test003.py  test004.py  test005.py  test006.py  test007.py  test008.py  test009.py  test010.py  test011.py  test012.py  test013.py  test014.py  test015.py  test016.py  test017.py  test018.py  test019.py  test020.py  test021.py  test022.py  test023.py  test024.py  test025.py  (+34 more)
viewer/: CMakeLists.txt  viewerPy.cpp  viewerPy.h  viewerPyApplication.cpp  viewerPyApplication.h
